--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "server": "json-server -d 750 -w -p 4444 ./server.js"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^17",
+    "react-dom": "^17",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^17",
     "@types/react-dom": "^18.0.4",
+    "@types/react-virtualized": "^9.21.21",
     "@vitejs/plugin-react": "^1.3.0",
     "json-server": "^0.17.0",
     "typescript": "^4.6.3",
