--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "server": "json-server -d 750 -w -p 4444 ./server.js"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^17",
     "react-dom": "^17",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17",
     "@types/react-dom": "^18.0.4",
     "@types/react-virtualized": "^9.21.21",
