--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "json-server": "^0.17.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
+  },
+  "resolutions": {
+    "react-virtualized": "git+https://git@github.com/remorses/react-virtualized-fixed-import.git#9.22.3"
   }
 }
